@@ -1,4 +1,6 @@
-* Bug [1193] Compile error: conflicting types for emalloc
+* Bug [1041] manycastclient fails with 4.2.5p120.
+* Bug [1193] Compile error: conflicting types for emalloc.
+* Bug [1196] VC6 winsock2.h does not define SO_EXLUSIVEADDRUSE.
 * xmt -> aorg timestamp cleanup from Dave Mills, reported by Dave Hart.
 * Leap/expire cleanup from Dave Mills.
 (4.2.5p178) 2009/05/21 Released by Harlan Stenn <stenn@ntp.org>
